app-test/testdata/typesystem/neg/constant-local-variable-immutability/check/const.check
testdata/typesystem/neg/constant-local-variable-immutability/src/const.cal:8:17: error: Cannot assign to const variable a.
                a := a + 1; // error
                ^